# workflow-testing

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/core/: config.py
